# QV-net

./: .gitignore  Cargo.toml  LICENSE  README.md
VarRange/: Cargo.toml  README.md
VarRange/src/: lib.rs
VarRange/src/proofs/: ipa.rs  sigma_pedersen.rs  varrange.rs  vec_poly.rs
script/: VarRange_vary_t.sh  real_world_daos.sh  shanks.sh  tally_vary_t.sh  test_vary_nc.sh  test_vary_nv.sh
src/: 1.txt  lib.rs  sigma_dl.rs  sigma_dleq.rs  sum_square.rs  transcript.rs  voting.rs  zk_eval.rs
zkSumCheck/: Cargo.toml  README.md
zkSumCheck/arithmetic/: Cargo.toml
zkSumCheck/arithmetic/src/: lib.rs  multilinear_polynomial.rs  virtual_polynomial.rs
zkSumCheck/subroutines/: Cargo.toml
zkSumCheck/subroutines/src/: lib.rs
zkSumCheck/subroutines/src/poly_iop/: errors.rs  mod.rs  prelude.rs
zkSumCheck/subroutines/src/poly_iop/zk_sum_check/: mod.rs
