[package]
name = "QV-net"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.7.8"
serde = "1.0"
serde_derive = "1.0"
curv-kzen = { version = "0.10", default-features = false }
merlin = { version = "3.0.0", default-features = false }
sha2 = "0.9"
generic-array = "0.14"
ark-secp256k1 = { version = "0.4.0", default-features = false }
ark-ff = { version = "^0.4.0", default-features = false }
rand = "0.8.5"
subroutines = { path = "./zkSumCheck/subroutines" }
arithmetic = { path = "./zkSumCheck/arithmetic" }
VarRange = { path = "./VarRange" }


[features]
default = ["curv-kzen/rust-gmp-kzen"]
